--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 2.8.11)
-project(CallbackTests)
+cmake_minimum_required(VERSION 3.5.1)
+project(ParadoxicalUI)	 
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CXX_STANDARD 11)
 find_package(Threads REQUIRED)
+find_package(crossguid CONFIG REQUIRED)
 
-add_executable(CallbackTests main.cpp)
-target_include_directories(CallbackTests PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries(CallbackTests ${CMAKE_THREAD_LIBS_INIT})
+add_executable(ParadoxicalUI main.cpp)
+target_compile_features(ParadoxicalUI PRIVATE cxx_std_11)
+target_include_directories(ParadoxicalUI PRIVATE ${CMAKE_SOURCE_DIR})
+target_link_libraries(ParadoxicalUI ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(ParadoxicalUI /usr/local/lib/libcrossguid.dylib)
